<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Flag user"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#494a45"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/tv_dialog_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter a reason"
        android:textSize="14sp"
        android:textColor="#555555"
        android:layout_marginBottom="10dp" />


    <EditText
        android:id="@+id/et_flag_reason_dialog"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_input"
        android:gravity="top|start"
        android:padding="10dp"
        android:textColor="#222222"
        android:textSize="14sp"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:maxLines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/btn_cancel_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="#BB0202"
            android:textStyle="bold"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_flag"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Flag"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="14sp"
            android:background="@drawable/bg_red_rounded"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />
    </LinearLayout>

</LinearLayout>