...
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp" />
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_flag_selected"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
...
